crates/mehen-markdown/tests/snapshots/markdown__assert_fixture_snapshot@links_mixed.md.snap
---
source: crates/mehen-markdown/tests/markdown.rs
---
path: "<fixture_path>"
loc:
  dloc: 29
  ploc: 14
  cloc: 0
  tloc: 0
  mloc: 0
  bloc: 12
  aloc: 3
loc_ratios:
  artifact_line_ratio: 0.10344827586206896
  code_line_ratio: 0
  table_line_ratio: 0
  math_line_ratio: 0
  blank_line_ratio: 0.41379310344827586
size:
  words: 44
  effective_content_units: 0.18333333333333332
  sections: 3
  headings: 3
ecu_inputs:
  table_cells: 0
  diagram_nodes: 0
  diagram_edges: 0
  math_tokens: 0
  raw_html_or_mdx_lines: 0
sections:
  - section_id: 0
    heading_level: 1
    heading_text: ~
    start_line: 1
    end_line: 29
    parent_section_id: ~
    child_section_ids:
      - 1
      - 2
    word_count: 38
    block_count: 7
  - section_id: 1
    heading_level: 2
    heading_text: ~
    start_line: 19
    end_line: 26
    parent_section_id: 0
    child_section_ids: []
    word_count: 5
    block_count: 4
  - section_id: 2
    heading_level: 2
    heading_text: ~
    start_line: 27
    end_line: 29
    parent_section_id: 0
    child_section_ids: []
    word_count: 1
    block_count: 2
complexity:
  reading_path_complexity: 1
  reading_path_complexity_raw: 5
  cognitive_complexity: 6.138999999999999
  halstead:
    operators_distinct: 7
    operators_total: 32
    operands_distinct: 51
    operands_total: 61
    vocabulary: 58
    length: 93
    volume: 544.7922325468642
    difficulty: 4.186274509803922
    effort: 2280.649836250108
    embedded_volume: 0
    total_volume: 544.7922325468642
links:
  total: 13
  internal: 2
  relative: 4
  external: 6
  external_vendor: 1
  scholarly: 1
  issue_pr: 1
  absolute_same_repo: 0
  image: 0
  footnote: 1
  bare_url: 1
  broken: 3
  link_debt_score: 0.7536538461538462
  information_scent_score: 0.5038461538461538
  review_burden: 17.8
link_records:
  - line: 3
    class: internal
    destination: "#details"
    text: Details
    is_image: false
    is_bare_url: false
    resolved: true
  - line: 3
    class: internal
    destination: "#missing"
    text: Broken anchor
    is_image: false
    is_bare_url: false
    resolved: false
  - line: 5
    class: relative
    destination: links_mixed.md
    text: this file
    is_image: false
    is_bare_url: false
    resolved: true
  - line: 6
    class: relative
    destination: code_fences.md
    text: sibling
    is_image: false
    is_bare_url: false
    resolved: true
  - line: 6
    class: relative
    destination: nowhere.md
    text: dead
    is_image: false
    is_bare_url: false
    resolved: false
  - line: 8
    class: external
    destination: "https://example.com"
    text: example
    is_image: false
    is_bare_url: false
    resolved: ~
  - line: 9
    class: external
    destination: "https://www.mozilla.org"
    text: "https://www.mozilla.org"
    is_image: false
    is_bare_url: true
    resolved: ~
  - line: 11
    class: issue_pr
    destination: "https://github.com/foo/bar/issues/42"
    text: Ticket 42
    is_image: false
    is_bare_url: false
    resolved: ~
  - line: 13
    class: scholarly
    destination: "https://doi.org/10.1/abc"
    text: DOI
    is_image: false
    is_bare_url: false
    resolved: ~
  - line: 15
    class: unresolved_reference_use
    destination: ""
    text: nope
    is_image: false
    is_bare_url: false
    resolved: false
  - line: 15
    class: external
    destination: "https://example.org"
    text: abc
    is_image: false
    is_bare_url: false
    resolved: ~
  - line: 17
    class: footnote
    destination: "1"
    text: "[^1]"
    is_image: false
    is_bare_url: false
    resolved: true
  - line: 23
    class: reference_definition
    destination: "https://example.org"
    text: abc-ref
    is_image: false
    is_bare_url: false
    resolved: ~
  - line: 29
    class: external_vendor
    destination: "https://developer.mozilla.org/en-US/"
    text: MDN
    is_image: false
    is_bare_url: false
    resolved: ~
visuals:
  images: 0
  diagrams: 0
  diagram_nodes_total: 0
  diagram_edges_total: 0
  diagram_cycles_total: 0
  visual_scaffold_score: 0
  visual_net_effect: 0
tables:
  count: 0
  max_cells: 0
  table_burden_score: 0
  table_scaffold_score: 0
  hard_warnings: 0
maintainability:
  documentation_maintainability_index: 82.28016483516484
  section_balance_score: 0.85
  good_scaffold_score: 0.12557692307692309
  artifact_debt_score: 0
grounding:
  repository_grounding_score: 0.10714285714285714
  evidence_coverage_score: 0.4230769230769231
ai_era:
  filler_lazy_structure_risk: 0.45142857142857146
  labels:
    - low-artifact-density
    - low-repository-grounding
    - placeholder-heavy
    - specificity-scarcity
  top_contributors:
    - - low-artifact-density
      - 1
    - - specificity-scarcity
      - 1
    - - low-repository-grounding
      - 0.8928571428571429
review:
  review_criticality_index: 14.500625
artifacts: []
prose:
  language_detection:
    dominant_language: en
    blocks:
      - start_line: 1
        end_line: 1
        language: en
      - start_line: 3
        end_line: 3
        language: en
      - start_line: 5
        end_line: 6
        language: en
      - start_line: 8
        end_line: 9
        language: en
      - start_line: 11
        end_line: 11
        language: en
      - start_line: 13
        end_line: 13
        language: en
      - start_line: 15
        end_line: 15
        language: en
      - start_line: 17
        end_line: 17
        language: en
      - start_line: 19
        end_line: 19
        language: en
      - start_line: 21
        end_line: 21
        language: en
      - start_line: 25
        end_line: 25
        language: en
      - start_line: 27
        end_line: 27
        language: en
      - start_line: 29
        end_line: 29
        language: en
  english:
    readability:
      flesch_reading_ease: ~
      flesch_kincaid_grade: ~
      gunning_fog: ~
      smog: ~
      ari: ~
      coleman_liau: ~
      dale_chall_new: ~
      dale_chall_list: ngsl-1.2
      forcast: ~
      lix: ~
      rix: ~
      ensemble_grade_band:
        - ~
        - ~
    lexical:
      mattr_50: 0.76
      hapax_ratio: 0.769
      dis_ratio: 0.179
      lexical_density: 0.765
      avg_sentence_words: 3.643
      p90_sentence_words: 7
      max_sentence_words: 9
      stddev_sentence_words: 2.409
      avg_word_chars: 5.216
      p90_word_chars: 8
      sentence_count: 14
      words_total: 51
    wording:
      passive_ratio: 0
      hedge_density: 0
      weasel_density: 0
      wordy_density: 0.02
      adverb_density: 0.02
      nominalization_density: 0.039
      expletive_count: 0
      lexical_illusions: 0
      cliche_density: 0
      nonword_count: 0
      long_sentence_count: 0
      wording_quality_score: 0.971
    inclusive_language:
      flags: []
      inclusive_language_score: 1
      flag_count: 0
    short_doc_warning: true
  japanese: ~
  meta:
    short_doc_warning: true
    words_counted: 51
    sentences_counted: 14
    blocks_stripped: []
