crates/mehen-markdown/tests/snapshots/markdown__assert_fixture_snapshot@mixed_bilingual.md.snap
---
source: crates/mehen-markdown/tests/markdown.rs
---
path: "<fixture_path>"
loc:
  dloc: 24
  ploc: 15
  cloc: 0
  tloc: 0
  mloc: 0
  bloc: 9
  aloc: 0
loc_ratios:
  artifact_line_ratio: 0
  code_line_ratio: 0
  table_line_ratio: 0
  math_line_ratio: 0
  blank_line_ratio: 0.375
size:
  words: 82
  effective_content_units: 0.3416666666666667
  sections: 4
  headings: 4
ecu_inputs:
  table_cells: 0
  diagram_nodes: 0
  diagram_edges: 0
  math_tokens: 0
  raw_html_or_mdx_lines: 0
sections:
  - section_id: 0
    heading_level: 1
    heading_text: ~
    start_line: 1
    end_line: 24
    parent_section_id: ~
    child_section_ids:
      - 1
      - 2
      - 3
    word_count: 2
    block_count: 1
  - section_id: 1
    heading_level: 2
    heading_text: ~
    start_line: 5
    end_line: 12
    parent_section_id: 0
    child_section_ids: []
    word_count: 44
    block_count: 2
  - section_id: 2
    heading_level: 2
    heading_text: ~
    start_line: 14
    end_line: 18
    parent_section_id: 0
    child_section_ids: []
    word_count: 6
    block_count: 2
  - section_id: 3
    heading_level: 2
    heading_text: ~
    start_line: 20
    end_line: 24
    parent_section_id: 0
    child_section_ids: []
    word_count: 30
    block_count: 1
complexity:
  reading_path_complexity: 1
  reading_path_complexity_raw: 3
  cognitive_complexity: 0.2
  halstead:
    operators_distinct: 5
    operators_total: 16
    operands_distinct: 78
    operands_total: 91
    vocabulary: 83
    length: 107
    volume: 682.129219154121
    difficulty: 2.916666666666667
    effort: 1989.5435558661864
    embedded_volume: 0
    total_volume: 682.129219154121
links:
  total: 0
  internal: 0
  relative: 0
  external: 0
  external_vendor: 0
  scholarly: 0
  issue_pr: 0
  absolute_same_repo: 0
  image: 0
  footnote: 0
  bare_url: 0
  broken: 0
  link_debt_score: 0
  information_scent_score: 0
  review_burden: 0
visuals:
  images: 0
  diagrams: 0
  diagram_nodes_total: 0
  diagram_edges_total: 0
  diagram_cycles_total: 0
  visual_scaffold_score: 0
  visual_net_effect: 0
tables:
  count: 0
  max_cells: 0
  table_burden_score: 0
  table_scaffold_score: 0
  hard_warnings: 0
maintainability:
  documentation_maintainability_index: 90.46
  section_balance_score: 0.85
  good_scaffold_score: 0
  artifact_debt_score: 0
grounding:
  repository_grounding_score: 0
  evidence_coverage_score: 0
ai_era:
  filler_lazy_structure_risk: 0.67
  labels:
    - large-unanchored-prose
    - low-artifact-density
    - low-repository-grounding
    - specificity-scarcity
  top_contributors:
    - - large-unanchored-prose
      - 1
    - - low-artifact-density
      - 1
    - - low-repository-grounding
      - 1
review:
  review_criticality_index: 0
artifacts: []
prose:
  language_detection:
    dominant_language: mixed
    blocks:
      - start_line: 1
        end_line: 1
        language: en
      - start_line: 3
        end_line: 3
        language: ja
      - start_line: 5
        end_line: 5
        language: en
      - start_line: 7
        end_line: 9
        language: en
      - start_line: 11
        end_line: 12
        language: en
      - start_line: 14
        end_line: 14
        language: ja
      - start_line: 16
        end_line: 16
        language: ja
      - start_line: 18
        end_line: 18
        language: ja
      - start_line: 20
        end_line: 20
        language: en
      - start_line: 22
        end_line: 24
        language: en
  english:
    readability:
      flesch_reading_ease: ~
      flesch_kincaid_grade: ~
      gunning_fog: ~
      smog: ~
      ari: ~
      coleman_liau: ~
      dale_chall_new: ~
      dale_chall_list: ngsl-1.2
      forcast: ~
      lix: ~
      rix: ~
      ensemble_grade_band:
        - ~
        - ~
    lexical:
      mattr_50: 0.898
      hapax_ratio: 0.797
      dis_ratio: 0.125
      lexical_density: 0.711
      avg_sentence_words: 10.375
      p90_sentence_words: 17
      max_sentence_words: 17
      stddev_sentence_words: 6.343
      avg_word_chars: 6.47
      p90_word_chars: 10
      sentence_count: 8
      words_total: 83
    wording:
      passive_ratio: 0.25
      hedge_density: 0.048
      weasel_density: 0
      wordy_density: 0.012
      adverb_density: 0.036
      nominalization_density: 0.133
      expletive_count: 0
      lexical_illusions: 0
      cliche_density: 0
      nonword_count: 0
      long_sentence_count: 0
      wording_quality_score: 0.848
    inclusive_language:
      flags: []
      inclusive_language_score: 1
      flag_count: 0
    short_doc_warning: true
  japanese:
    script_composition:
      kanji_ratio: 0.309
      hiragana_ratio: 0.418
      katakana_ratio: 0.273
      latin_ratio: 0
      digit_ratio: 0
      script_entropy: 1.561
      visible_chars: 165
    readability:
      tateishi_rs: ~
      jouyou_grade_mean: 2.922
      hyougai_ratio: 0
    lexical:
      avg_sentence_chars: 28
      p90_sentence_chars: 61
      max_sentence_chars: 61
      comma_period_ratio: 0.6
      jukugo_density: 0.769
      sentence_count: 6
      char_count: 168
    wording:
      politeness_dominant: keitai
      keitai_count: 5
      jotai_count: 0
      honorific_count: 0
      keitai_jotai_mix_count: 0
      weak_phrase_count: 0
      redundant_expression_count: 0
      doubled_joshi_count: 3
      long_kanji_run_count: 0
      max_comma_violation_count: 0
      max_ten_violation_count: 0
      long_sentence_count: 0
      wording_quality_score: 0.83
    style_conformance:
      violations:
        - rule: rule-5-trailing-chouonpu
          severity: warn
          count: 2
      total_violations: 2
      violation_density_per_1000: 12.121
    short_doc_warning: true
  meta:
    short_doc_warning: true
    words_counted: 251
    sentences_counted: 14
    blocks_stripped:
      - code
