crates/mehen-markdown/tests/snapshots/markdown__assert_fixture_snapshot@navigation_heavy.md.snap
---
source: crates/mehen-markdown/tests/markdown.rs
---
path: "<fixture_path>"
loc:
  dloc: 29
  ploc: 16
  cloc: 0
  tloc: 0
  mloc: 0
  bloc: 9
  aloc: 4
loc_ratios:
  artifact_line_ratio: 0.13793103448275862
  code_line_ratio: 0
  table_line_ratio: 0
  math_line_ratio: 0
  blank_line_ratio: 0.3103448275862069
size:
  words: 75
  effective_content_units: 0.3125
  sections: 4
  headings: 4
ecu_inputs:
  table_cells: 0
  diagram_nodes: 0
  diagram_edges: 0
  math_tokens: 0
  raw_html_or_mdx_lines: 0
sections:
  - section_id: 0
    heading_level: 1
    heading_text: ~
    start_line: 1
    end_line: 29
    parent_section_id: ~
    child_section_ids:
      - 1
      - 2
      - 3
    word_count: 21
    block_count: 1
  - section_id: 1
    heading_level: 2
    heading_text: ~
    start_line: 7
    end_line: 10
    parent_section_id: 0
    child_section_ids: []
    word_count: 14
    block_count: 1
  - section_id: 2
    heading_level: 2
    heading_text: ~
    start_line: 12
    end_line: 16
    parent_section_id: 0
    child_section_ids: []
    word_count: 14
    block_count: 1
  - section_id: 3
    heading_level: 2
    heading_text: ~
    start_line: 18
    end_line: 29
    parent_section_id: 0
    child_section_ids: []
    word_count: 26
    block_count: 7
complexity:
  reading_path_complexity: 1
  reading_path_complexity_raw: 7
  cognitive_complexity: 7.099999999999999
  halstead:
    operators_distinct: 6
    operators_total: 39
    operands_distinct: 79
    operands_total: 94
    vocabulary: 85
    length: 133
    volume: 852.4489945063143
    difficulty: 3.5696202531645564
    effort: 3042.9191955795013
    embedded_volume: 0
    total_volume: 852.4489945063143
links:
  total: 14
  internal: 2
  relative: 5
  external: 5
  external_vendor: 0
  scholarly: 0
  issue_pr: 0
  absolute_same_repo: 0
  image: 0
  footnote: 2
  bare_url: 0
  broken: 5
  link_debt_score: 0.55
  information_scent_score: 0.5
  review_burden: 23.1
link_records:
  - line: 9
    class: internal
    destination: "#install"
    text: installation
    is_image: false
    is_bare_url: false
    resolved: true
  - line: 9
    class: internal
    destination: "#usage"
    text: usage
    is_image: false
    is_bare_url: false
    resolved: true
  - line: 10
    class: relative
    destination: "./architecture.md#runtime"
    text: architecture doc
    is_image: false
    is_bare_url: false
    resolved: false
  - line: 14
    class: external
    destination: "https://docs.example.com/install"
    text: official docs
    is_image: false
    is_bare_url: false
    resolved: ~
  - line: 15
    class: relative
    destination: "../scripts/setup.sh"
    text: setup script
    is_image: false
    is_bare_url: false
    resolved: false
  - line: 16
    class: relative
    destination: "../CONTRIBUTING.md"
    text: contributing
    is_image: false
    is_bare_url: false
    resolved: false
  - line: 20
    class: relative
    destination: "./quickstart.md"
    text: quickstart
    is_image: false
    is_bare_url: false
    resolved: false
  - line: 20
    class: external
    destination: "https://api.example.com/reference"
    text: API reference
    is_image: false
    is_bare_url: false
    resolved: ~
  - line: 21
    class: external
    destination: "https://vendor-a.com/api"
    text: vendor-a
    is_image: false
    is_bare_url: false
    resolved: ~
  - line: 22
    class: external
    destination: "https://vendor-b.org"
    text: vendor-b
    is_image: false
    is_bare_url: false
    resolved: ~
  - line: 22
    class: external
    destination: "https://vendor-c.io"
    text: vendor-c
    is_image: false
    is_bare_url: false
    resolved: ~
  - line: 24
    class: footnote
    destination: "1"
    text: "[^1]"
    is_image: false
    is_bare_url: false
    resolved: true
  - line: 24
    class: footnote
    destination: "2"
    text: "[^2]"
    is_image: false
    is_bare_url: false
    resolved: true
  - line: 27
    class: relative
    destination: "./adr/007.md"
    text: adr-007
    is_image: false
    is_bare_url: false
    resolved: false
  - line: 29
    class: reference_definition
    destination: "https://api.example.com/reference"
    text: api-ref
    is_image: false
    is_bare_url: false
    resolved: ~
visuals:
  images: 0
  diagrams: 0
  diagram_nodes_total: 0
  diagram_edges_total: 0
  diagram_cycles_total: 0
  visual_scaffold_score: 0
  visual_net_effect: 0
tables:
  count: 0
  max_cells: 0
  table_burden_score: 0
  table_scaffold_score: 0
  hard_warnings: 0
maintainability:
  documentation_maintainability_index: 85.954
  section_balance_score: 0.85
  good_scaffold_score: 0.175
  artifact_debt_score: 0
grounding:
  repository_grounding_score: 0.010000000000000002
  evidence_coverage_score: 0.5576923076923077
ai_era:
  filler_lazy_structure_risk: 0.45799999999999996
  labels:
    - low-artifact-density
    - low-repository-grounding
    - specificity-scarcity
  top_contributors:
    - - low-artifact-density
      - 1
    - - low-repository-grounding
      - 0.99
    - - specificity-scarcity
      - 0.9166666666666666
review:
  review_criticality_index: 15.665714285714285
artifacts: []
prose:
  language_detection:
    dominant_language: en
    blocks:
      - start_line: 1
        end_line: 1
        language: en
      - start_line: 3
        end_line: 5
        language: en
      - start_line: 7
        end_line: 7
        language: en
      - start_line: 9
        end_line: 10
        language: en
      - start_line: 12
        end_line: 12
        language: en
      - start_line: 14
        end_line: 16
        language: en
      - start_line: 18
        end_line: 18
        language: en
      - start_line: 20
        end_line: 22
        language: en
      - start_line: 24
        end_line: 24
        language: en
      - start_line: 26
        end_line: 26
        language: en
      - start_line: 27
        end_line: 27
        language: en
  english:
    readability:
      flesch_reading_ease: ~
      flesch_kincaid_grade: ~
      gunning_fog: ~
      smog: ~
      ari: ~
      coleman_liau: ~
      dale_chall_new: ~
      dale_chall_list: ngsl-1.2
      forcast: ~
      lix: ~
      rix: ~
      ensemble_grade_band:
        - ~
        - ~
    lexical:
      mattr_50: 0.79
      hapax_ratio: 0.773
      dis_ratio: 0.182
      lexical_density: 0.77
      avg_sentence_words: 7.25
      p90_sentence_words: 14
      max_sentence_words: 21
      stddev_sentence_words: 5.988
      avg_word_chars: 5.506
      p90_word_chars: 9
      sentence_count: 12
      words_total: 87
    wording:
      passive_ratio: 0
      hedge_density: 0
      weasel_density: 0.011
      wordy_density: 0
      adverb_density: 0
      nominalization_density: 0.057
      expletive_count: 0
      lexical_illusions: 0
      cliche_density: 0
      nonword_count: 0
      long_sentence_count: 0
      wording_quality_score: 0.996
    inclusive_language:
      flags: []
      inclusive_language_score: 1
      flag_count: 0
    short_doc_warning: true
  japanese: ~
  meta:
    short_doc_warning: true
    words_counted: 87
    sentences_counted: 12
    blocks_stripped: []
