crates/mehen-markdown/tests/snapshots/markdown__assert_fixture_snapshot@passive_heavy.md.snap
---
source: crates/mehen-markdown/tests/markdown.rs
---
path: "<fixture_path>"
loc:
  dloc: 22
  ploc: 17
  cloc: 0
  tloc: 0
  mloc: 0
  bloc: 5
  aloc: 0
loc_ratios:
  artifact_line_ratio: 0
  code_line_ratio: 0
  table_line_ratio: 0
  math_line_ratio: 0
  blank_line_ratio: 0.22727272727272727
size:
  words: 151
  effective_content_units: 0.6291666666666667
  sections: 1
  headings: 1
ecu_inputs:
  table_cells: 0
  diagram_nodes: 0
  diagram_edges: 0
  math_tokens: 0
  raw_html_or_mdx_lines: 0
sections:
  - section_id: 0
    heading_level: 1
    heading_text: ~
    start_line: 1
    end_line: 22
    parent_section_id: ~
    child_section_ids: []
    word_count: 151
    block_count: 5
complexity:
  reading_path_complexity: 1
  reading_path_complexity_raw: 1
  cognitive_complexity: 0
  halstead:
    operators_distinct: 2
    operators_total: 22
    operands_distinct: 97
    operands_total: 153
    vocabulary: 99
    length: 175
    volume: 1160.1374085139316
    difficulty: 1.577319587628866
    effort: 1829.9074587900159
    embedded_volume: 0
    total_volume: 1160.1374085139316
links:
  total: 0
  internal: 0
  relative: 0
  external: 0
  external_vendor: 0
  scholarly: 0
  issue_pr: 0
  absolute_same_repo: 0
  image: 0
  footnote: 0
  bare_url: 0
  broken: 0
  link_debt_score: 0
  information_scent_score: 0
  review_burden: 0
visuals:
  images: 0
  diagrams: 0
  diagram_nodes_total: 0
  diagram_edges_total: 0
  diagram_cycles_total: 0
  visual_scaffold_score: 0
  visual_net_effect: 0
tables:
  count: 0
  max_cells: 0
  table_burden_score: 0
  table_scaffold_score: 0
  hard_warnings: 0
maintainability:
  documentation_maintainability_index: 91.51
  section_balance_score: 1
  good_scaffold_score: 0
  artifact_debt_score: 0
grounding:
  repository_grounding_score: 0
  evidence_coverage_score: 0
ai_era:
  filler_lazy_structure_risk: 0.7075
  labels:
    - large-unanchored-prose
    - low-artifact-density
    - low-repository-grounding
    - specificity-scarcity
  top_contributors:
    - - large-unanchored-prose
      - 1
    - - low-artifact-density
      - 1
    - - low-repository-grounding
      - 1
review:
  review_criticality_index: 0
artifacts: []
prose:
  language_detection:
    dominant_language: en
    blocks:
      - start_line: 1
        end_line: 1
        language: en
      - start_line: 3
        end_line: 5
        language: en
      - start_line: 7
        end_line: 9
        language: en
      - start_line: 11
        end_line: 13
        language: en
      - start_line: 15
        end_line: 18
        language: en
      - start_line: 20
        end_line: 22
        language: en
  english:
    readability:
      flesch_reading_ease: 53.023
      flesch_kincaid_grade: 7.636
      gunning_fog: 9.479
      smog: ~
      ari: 7.248
      coleman_liau: 11.4
      dale_chall_new: 12.841
      dale_chall_list: ngsl-1.2
      forcast: 11.4
      lix: 43.442
      rix: 2.591
      ensemble_grade_band:
        - 7.248
        - 11.4
    lexical:
      mattr_50: 0.739
      hapax_ratio: 0.91
      dis_ratio: 0.03
      lexical_density: 0.592
      avg_sentence_words: 7.136
      p90_sentence_words: 8
      max_sentence_words: 11
      stddev_sentence_words: 1.391
      avg_word_chars: 5.331
      p90_word_chars: 10
      sentence_count: 22
      words_total: 157
    wording:
      passive_ratio: 0.909
      hedge_density: 0
      weasel_density: 0
      wordy_density: 0
      adverb_density: 0.006
      nominalization_density: 0.032
      expletive_count: 0
      lexical_illusions: 0
      cliche_density: 0
      nonword_count: 0
      long_sentence_count: 0
      wording_quality_score: 0.82
    inclusive_language:
      flags: []
      inclusive_language_score: 1
      flag_count: 0
    short_doc_warning: false
  japanese: ~
  meta:
    short_doc_warning: false
    words_counted: 157
    sentences_counted: 22
    blocks_stripped: []
